0.03

0.02 2015-01-08T01:30:56+01:00
 [Log::FreeSWITCH::Line::Data]
 - Add missing VERSION.
 - Add tests.
 - Fix time without miliseconds.

0.01 2015-01-04T11:16:34+01:00
 - First version.