@@ -1,4 +1,6 @@
 0.03
+ [Common]
+ - Fix dependencies, which breaks tests (bad Error::Pure::Always).
 
 0.02 2015-01-08T01:30:56+01:00
  [Log::FreeSWITCH::Line::Data]
